--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -245,6 +245,12 @@
             </ul>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-12 footer-other-images">
+            <%= image_tag "india-flag.png", alt: 'Made In India', class: "india-flag" %>
+            <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=nCEM6zLMkoGrDtJpJyTq6dRN5buMnpp2iUB8KrJuakCfDuXBTzTScbzcNa3E"></script></span>
+          </div>
+        </div>
       </div>
     </footer>
     <div class="clearfix"></div>
@@ -259,15 +265,15 @@
             <p>Copyright &copy; <%= "#{Time.zone.now.year}" %> Growwcapital.com. All rights reserved.</p>
           </div>
           <div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
-          <ul class="social margin-bottom-25 md-margin-bottom-25 sm-margin-bottom-20 xs-margin-bottom-20 xs-padding-top-10 clearfix">
-          <li><a class="sc-1" style="display: none;" href="javascript:void(0)"></a></li>
-          <li><a class="sc-1" href="#"></a></li>
-          <li><a class="sc-2" href="#"></a></li>
-          <li><a class="sc-3" href="#"></a></li>
-          <li><a class="sc-5" href="#"></a></li>
-          <li><a class="sc-9" href="#"></a></li>
-          <li><a class="sc-11" href="#"></a></li>
-          </ul>
+            <ul class="social margin-bottom-25 md-margin-bottom-25 sm-margin-bottom-20 xs-margin-bottom-20 xs-padding-top-10 clearfix">
+              <li><a class="sc-1" style="display: none;" href="javascript:void(0)"></a></li>
+              <li><a class="sc-1" href="#"></a></li>
+              <li><a class="sc-2" href="#"></a></li>
+              <li><a class="sc-3" href="#"></a></li>
+              <li><a class="sc-5" href="#"></a></li>
+              <li><a class="sc-9" href="#"></a></li>
+              <li><a class="sc-11" href="#"></a></li>
+            </ul>
           </div>
         </div>
       </div>
