--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -16,11 +16,13 @@
     background: url(./carosel/desktop/credit-card-banner.png) top center no-repeat;
     height: 550px;
     background-size: contain;
+    margin-top: 70px;
   }
   .img2 {
     background: url(./carosel/desktop/home-loan-banner.png) top center no-repeat;
     height: 550px;
     background-size: contain;
+    margin-top: 70px;
   }
   .txt-carosel-imgs {
     padding: 140px 140px 140px 300px;
