--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -352,6 +352,12 @@
 }
 
 @media screen and (max-width: 767px) {
+  #abt-us-banner {
+    height: 95px;
+  }  
+  .homepage {
+    margin-top: 90px;
+  }
   .cc-icon {
     width: 20%;
     margin-top: 33px;
