--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
                   <%end%>
                   <li class="dropdown">
                       <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">All Products</a>
-                      <ul class="dropdown-menu">
+                      <ul class="dropdown-menu" style="opacity: 1;">
                         <li><%= link_to "Credit Card", custom_credit_card_path, method: :get %></li>
                         <li><%= link_to "Personal Loan", custom_personal_loan_path, method: :get %></li>
                         <li><%= link_to "Transfer Personal Loan", custom_transfer_personal_loan_path, method: :get %></li>
