--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -789,9 +789,12 @@ textarea.error, input.error, select.error {
   .welcome-wrap h4 {
     font-size: 16px;
   }
-  .contact-info div {
-    width: 177px;
-    word-break: break-word;
+  .contact-info{
+    display: grid;
+    div {
+      width: 100%;
+      word-break: break-word;
+    }  
   }
   .pre-appr {
     .card, .loan {
