--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -52,7 +52,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="actions">
-                <%= f.submit "SIGN UP" %>
+                <%= f.submit "Sign Up", class: "btn btn-custom btn-block" %>
               </div>
             </div>
             <div class="col-md-6 text-right">
