--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,17 +9,21 @@
   .owl-nav .owl-next {
     right: 10px;
   }
+  .owl-next:focus, .owl-prev:focus {
+    outline: 0px dotted;
+    outline: none;
+  }
   img {
     border-bottom: 1px solid #ececec;
   }
   .img1 {
-    background: url(./carosel/desktop/credit-card-banner.png) top center no-repeat;
+    background: url(./carosel/desktop/credit-card-banner.jpg) top center no-repeat;
     height: 550px;
     background-size: contain;
     margin-top: 70px;
   }
   .img2 {
-    background: url(./carosel/desktop/home-loan-banner.png) top center no-repeat;
+    background: url(./carosel/desktop/home-loan-banner.jpg) top center no-repeat;
     height: 550px;
     background-size: contain;
     margin-top: 70px;
