--- a/app/views/credit_card/step3.html.erb
+++ b/app/views/credit_card/step3.html.erb
@@ -17,7 +17,7 @@
             <td><b><%= number_to_currency(card.joining_charge, unit: "₹ ") %></b></td>
             <td><b><%= [3, 2].include?(@credit_card.employment_type) ? "Free" : number_to_currency(card.annual_charge, unit: "₹ ") %></b></td>
             <td>
-              <%= image_tag "meter.png", alt: "meter" %><br>
+              <%= image_tag "meter.png", alt: "meter", class: "meter-img" %><br>
               <span style="color: #aaa4a4;">Excelent</span>
             </td>
             <td>
