--- a/app/views/loan_against_property/step3.html.erb
+++ b/app/views/loan_against_property/step3.html.erb
@@ -21,7 +21,7 @@
             <td><b><%= number_to_currency("%.2f" % processing_fee(bank.loan_against_property_bank_info.processing_fee, @loan_against_property.loan_amount, bank), unit: "₹ ") %></b></td>
             <td class="pre-pay-charg"><%= bank.loan_against_property_bank_info.preprocessing_charges.html_safe %></td>
             <td>
-              <%= image_tag "meter.png", alt: "meter" %><br>
+              <%= image_tag "meter.png", alt: "meter", class: "meter-img" %><br>
               <span style="color: #aaa4a4;">Excelent</span>
             </td>
             <td>
