--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -30,8 +30,8 @@
           <div class="row">
             <div class="col-md-6">
               <div class="actions">
-                <%= f.submit "Send me reset password instructions" %>
-              </div>        
+                <%= f.submit "Send me reset password instructions", class: "btn btn-custom" %>
+              </div>
             </div>
             <div class="col-md-6 text-right">
               <%= render "devise/shared/links" %>
