(Fixed) updated the css

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -83,7 +83,7 @@
 #pre-apv-banner {
   background-image: url(./pre-approved.jpg);
   height: 450px;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   margin-top: 110px;
   width: 100%;
