--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,6 +74,8 @@
                         <li><%= link_to "Loan Against Property", custom_loan_against_property_path, method: :get %></li>
                         <li><%= link_to "New Car Loan", custom_new_car_loan_path, method: :get %></li>
                         <li><%= link_to "Used Car Loan", custom_used_car_loan_path, method: :get %></li>
+                        <li><%= link_to "Gold Loan", custom_gold_loan_path, method: :get %></li>
+                        <li><%= link_to "Insurance", custom_insurance_path, method: :get %></li>
                       </ul>
                   </li>
                   <li class="<%#= active_tab('pre_approved') %>">
