--- a/app/views/home/pre_approved.html.erb
+++ b/app/views/home/pre_approved.html.erb
@@ -1,5 +1,9 @@
-<section id="pre-apv-banner">
-</section>
+<div class="row">
+  <div class="col-md-12">
+    <section id="pre-apv-banner">
+    </section>
+  </div>
+</div>
 <br>
 <section class="personal-loan-section">
   <div class="container p-container">
