--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -460,7 +460,7 @@
             </div>
             <div class="col-md-6 text-center">
               <%= image_tag "dis-amount.png" %>
-              <p>We have disbursed loans amount over <span>110Crore</span><br>from varous banks and NBFS</p>
+              <p>We have disbursed loans amount over <span>110Crore</span><br>from varous banks and NBFC</p>
             </div>
           </div>
         </div>
