--- a/app/views/home/pre_approved.html.erb
+++ b/app/views/home/pre_approved.html.erb
@@ -12,7 +12,7 @@
         <div class="row heading">
           <div class="col-md-4">
             <div class="form-group">
-              <h3>Pre Approved Offer</h3>
+              <h3>Pre-Approved Offer</h3>
             </div>
           </div>
         </div>
