--- a/app/views/home/pre_approved_status.html.erb
+++ b/app/views/home/pre_approved_status.html.erb
@@ -2,13 +2,13 @@
   <div class="container">
     <div class="row align-items-end">
       <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-        <h2>Pre Approved Offers Approval</h2>
+        <h2>Pre-Approved Offers Approval</h2>
         <h4></h4>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
         <ul class="breadcrumb">
           <li><a href="#">Home</a></li>
-          <li>Pre Approved Offers Approval</li>
+          <li>Pre-Approved Offers Approval</li>
         </ul>
       </div>
     </div>
