--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,20 +1,7 @@
-<section id="secondary-banner" class="dynamic-image-5">
-  <div class="container">
-    <div class="row align-items-end">
-      <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-        <h2>Forgot your password?</h2>
-        <h4></h4>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-        <ul class="breadcrumb">
-          <li><a href="#">Home</a></li>
-          <li>Forgot your password?</li>
-        </ul>
-      </div>
-    </div>
-  </div>
+<section id="forget-password">
 </section>
-<section class="personal-loan-section custom-container">
+<br>
+<section class="personal-loan-section">
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <div class="container">
       <div class="row regist-div">
@@ -27,6 +14,7 @@
               </div>
             </div>
           </div>
+          <br>
           <div class="row">
             <div class="col-md-6">
               <div class="actions">
