--- a/app/views/loan_mailer/refer_earn_admin.html.erb
+++ b/app/views/loan_mailer/refer_earn_admin.html.erb
@@ -5,6 +5,7 @@
 <p>Product Name: <%= @refer_earn.product_name.humanize %></p>
 <p>Full Name: <%= @refer_earn.referer_full_name %></p>
 <p>Mobile Number: <%= @refer_earn.referer_mobile_number %></p>
+<p>Reference Number: <%= @refer_earn.reference_number %></p>
 <br><br>
 <p>Thanks & Regards</p>
 <p>Team Growwcapital</p>
