--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,3 +1,24 @@
+.refer-earn-bottom {
+  position: fixed !important;
+  height: 50px !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  width: 100% !important;
+  z-index: 9999 !important;
+  border-top: 1px solid #d0c9c9;
+  background-color: #fff;
+  text-align: center;
+  display: none;
+  .refer-earn {
+    margin-top: 10px;
+    a {
+      font-size: 20px;
+      font-weight: bold;
+      text-shadow: 1px 1px 2px #d67485;
+    }
+  }
+}
 .meter-img {
   width: 50%;
   margin-top: 15px;
@@ -1509,6 +1530,12 @@ homeStrip .container>p {
 }
 
 @media screen and (max-width: 767px) {
+  .refer-earn-bottom {
+    display: block;
+  }
+  .sp-refer-earn {
+    display: none;
+  }
   .quicklinks-menu ul li a {
     width: 85px;
   }
