--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -1,6 +1,9 @@
-<section id="abt-us-banner">
-</section>
-<br><br>
+<div class="row">
+  <div class="col-md-12">
+    <div id="abt-us-banner">
+    </div>    
+  </div>
+</div>
 <section class="personal-loan-section">
   <div class="container">
     <div class="row align-items-end">
