--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,6 +1,6 @@
-<section id="forget-password">
+<section id="forget-password-section">
 </section>
-<br>
+
 <section class="personal-loan-section">
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <div class="container">
