--- a/app/views/business_loan/step3.html.erb
+++ b/app/views/business_loan/step3.html.erb
@@ -1,6 +1,6 @@
 <section class="business-loan-section custom-container">
   <div class="container">
-    <div class="row">
+    <div class="row table-responsive">
       <table class="table loan-table">
         <thead class="thead-light">
           <tr>
