--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,3 +1,18 @@
+.select2-container {
+  border: 1px solid #e4e4e4;
+  border-radius: 4px 4px;
+  height: 35px;
+  font-size: 16px;
+  color: #54545e;
+  .select2-selection__rendered {
+    padding-top: 4px;
+    padding-left: 15px !important;
+  }
+  .select2-dropdown {
+    border: 1px solid #e4e4e4 !important;
+    border-top: none;
+  }
+}
 .refer-earn-bottom {
   position: fixed !important;
   height: 50px !important;
@@ -528,8 +543,8 @@ input {
   height: 300px;
 }
 
-textarea.error, input.error, select.error {
-  border: 1px dotted #ff0000;
+textarea.error, input.error, select.error, .select2-container.error {
+  //border: 1px dotted #ff0000;
 }
 
 .main-thx-row {
@@ -1535,6 +1550,13 @@ homeStrip .container>p {
 }
 
 @media screen and (max-width: 767px) {
+  .table-responsive {
+    overflow: scroll;
+  }
+  .img-effect {
+    width: 100px;
+    height: 50px;
+  }
   .personal-loan-section {
     margin-top: 100px;
   }
