--- a/app/views/home_loan/step1.html.erb
+++ b/app/views/home_loan/step1.html.erb
@@ -1,19 +1,3 @@
-<section id="secondary-banner1" >
-    <div class="container">
-        <div class="row align-items-end">
-            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <h2>New Personal Loan</h2>
-                <h4>Apply for new personal loan</h4>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <ul class="breadcrumb">
-                    <li><a href="#">Home</a></li>
-                    <li>FAQ</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
 <section class="personal-loan-section custom-container">
   <div class="container h-container">
     <%= form_for @home_loan, :url => { :action => @home_loan.id.nil? ? "create_otp" : "update" }, remote: true, html: { id:  "basic_home_loan", class: "basic_home_loan" } do |f| %>
@@ -28,7 +12,7 @@
         <div class="row first-row">
           <div class="col-md-6">
             <div class="form-group">
-              <label>Your desired loan amount
+              <label>Your total desired loan amount
                 <i data-toggle="tooltip" data-placement="top" title="Please fill in the loan amount you need to fullfil your financial needs." class="fa fa-info-circle" aria-hidden="true"></i>
               </label>
               <%= f.number_field(:loan_amount, class: "form-control") %>
@@ -79,7 +63,7 @@
             <%= f.label "Terms & Conditions", for: 'home_loan_terms_and_conditions' %>
           </div>
         </div>
-        <button type="submit" class="btn btn-custom">Submit</button>
+        <button type="submit" class="btn btn-custom">Process</button>
       </div>
     <%end%>
     <br>
