--- a/app/views/personal_loan/_form.html.erb
+++ b/app/views/personal_loan/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="row first-row">
   <div class="col-md-4">
     <div class="form-group">
-      <label>Your desired loan amount
+      <label>Your total desired loan amount
         <i data-toggle="tooltip" data-placement="top" title="Please fill in the loan amount you need to fullfil your financial needs." class="fa fa-info-circle" aria-hidden="true"></i>
       </label>
       <%= f.number_field(:loan_amount, class: "form-control", placeholder: "Rs. 0") %>
